--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
-# Ignore all files and folders by default
-*
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Do not ignore `.gitignore` itself
-!.gitignore
+# Distribution / packaging
+dist/
 
-# Ignore MD, Batch, and Txt files
-*.md
-*.bat
+# PyArmor files
+pyarmor_runtime_0000000/
+
+# Virtual environment
+.venv/
+
+# Ignore all text files, except important ones
 *.txt
+!requirements.txt
+!README.md
 
-# Ignore Python files
-*.py
-
-# Ignore the "screen-recorder-app-main" folder and its contents
-screen-recorder-app-main/
+# OS generated files
+.DS_Store
+Thumbs.db
